<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="60dp"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <TextView
        android:id="@+id/text_type_1"
        android:layout_width="60dp"
        android:layout_height="30dp"
        android:layout_gravity="center"
        android:background="@drawable/pow_text_bg"
        android:gravity="center"
        android:padding="5dp"
        android:text="@string/all"
        android:textColor="@color/white"
        android:textSize="13sp" />

    <View
        android:layout_width="60dp"
        android:layout_height="1px"
        android:background="@color/colorAccent" />

    <TextView
        android:id="@+id/text_type_2"
        android:layout_width="60dp"
        android:layout_height="30dp"
        android:layout_gravity="center"
        android:background="@drawable/pow_text_bg"
        android:gravity="center"
        android:padding="5dp"
        android:text="@string/jishi_status2"
        android:textColor="@color/white"
        android:textSize="13sp" />

    <View
        android:layout_width="60dp"
        android:layout_height="1px"
        android:background="@color/colorAccent" />

    <TextView
        android:id="@+id/text_type_3"
        android:layout_width="60dp"
        android:layout_height="30dp"
        android:layout_gravity="center"
        android:background="@drawable/pow_text_bg"
        android:gravity="center"
        android:padding="5dp"
        android:text="@string/jishi_status1"
        android:textColor="@color/white"
        android:textSize="13sp" />

    <View
        android:layout_width="60dp"
        android:layout_height="1px"
        android:background="@color/colorAccent" />
</LinearLayout>
