<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center">

    <LinearLayout
        android:layout_width="500dp"
        android:layout_height="200dp"
        android:background="@mipmap/dialog_bg"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="2"
            android:gravity="center"
            android:singleLine="true"
            android:text="@string/call_tips"
            android:textColor="@color/menu"
            android:textSize="24sp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:orientation="horizontal">

            <Button
                android:id="@+id/ok"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@drawable/btn"
                android:text="@string/ok"
                android:textColor="@drawable/menu_name2"
                android:textSize="24sp" />

            <Button
                android:id="@+id/cancle"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_marginLeft="10dp"
                android:layout_weight="1"
                android:background="@drawable/btn"
                android:text="@string/cancle"
                android:textColor="@drawable/menu_name2"
                android:textSize="24sp" />
        </LinearLayout>
    </LinearLayout>


</RelativeLayout>