<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="490dp"
    android:layout_marginLeft="50dp"
    android:layout_marginRight="50dp"
    android:layout_marginTop="90dp"
    android:background="@color/white"
    android:gravity="center"
    android:orientation="horizontal">

    <LinearLayout
        android:layout_width="204dp"
        android:layout_height="match_parent"
        android:gravity="center_horizontal"
        android:orientation="vertical"
        android:padding="10dp">

        <EditText
            android:id="@+id/keyword"
            android:layout_width="185dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="14dp"
            android:background="@mipmap/edit_search"
            android:gravity="center"
            android:hint="@string/searchjishi_hit"
            android:paddingBottom="5dp"
            android:paddingLeft="15dp"
            android:paddingRight="15dp"
            android:paddingTop="5dp"
            android:singleLine="true"
            android:textColor="@color/menu"
            android:textColorHint="@color/menu" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/jishi_sex"
                android:textColor="@color/menu"
                android:textSize="20sp" />

            <RadioGroup
                android:id="@+id/rBtnGroup"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <RadioButton
                    android:id="@+id/jishi_all"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@drawable/sex"
                    android:button="@null"
                    android:checked="true"
                    android:gravity="center"
                    android:text="@string/all"
                    android:textColor="@color/menu"
                    android:textSize="20sp" />

                <RadioButton
                    android:id="@+id/jishi_sex1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:background="@drawable/sex"
                    android:button="@null"
                    android:gravity="center"
                    android:text="@string/jishi_sex1"
                    android:textColor="@color/menu"
                    android:textSize="20sp" />

                <RadioButton
                    android:id="@+id/jishi_sex2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:background="@drawable/sex"
                    android:button="@null"
                    android:gravity="center"
                    android:text="@string/jishi_sex2"
                    android:textColor="@color/menu"
                    android:textSize="20sp" />
            </RadioGroup>


        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/jishi_status"
                android:textColor="@color/menu"
                android:textSize="20sp" />

            <RadioGroup
                android:id="@+id/status_btn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <RadioButton
                    android:id="@+id/status_all"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@drawable/sex"
                    android:button="@null"
                    android:checked="true"
                    android:gravity="center"
                    android:text="@string/all"
                    android:textColor="@color/menu"
                    android:textSize="20sp" />

                <RadioButton
                    android:id="@+id/status1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:background="@drawable/sex"
                    android:button="@null"
                    android:gravity="center"
                    android:text="@string/jishi_status1"
                    android:textColor="@color/menu"
                    android:textSize="20sp" />

                <RadioButton
                    android:id="@+id/status2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:background="@drawable/sex"
                    android:button="@null"
                    android:gravity="center"
                    android:text="@string/jishi_status2"
                    android:textColor="@color/menu"
                    android:textSize="20sp" />
            </RadioGroup>


        </LinearLayout>

        <ListView
            android:id="@+id/left_list"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:divider="@color/transparent"
            android:dividerHeight="8dp"
            android:focusable="false"
            android:listSelector="@drawable/list_selector"
            android:paddingTop="8dp"
            android:scrollbars="none"></ListView>
    </LinearLayout>

    <View
        android:layout_width="1dp"
        android:layout_height="match_parent"
        android:background="@color/menu"></View>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="10dp">

        <GridView
            android:id="@+id/right_grid"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:listSelector="@mipmap/video_selector"
            android:numColumns="6"
            android:scrollbars="none"></GridView>
    </LinearLayout>


</LinearLayout>