<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="500dp"
    android:layout_height="380dp"
    android:layout_gravity="center"
    android:background="@drawable/roids_bk2"
    android:orientation="vertical">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="30dp"
        android:gravity="center"
        android:text="@string/feature"
        android:textColor="@color/grgray"
        android:textSize="20sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginTop="20dp"
        android:orientation="horizontal">

        <Button
            android:id="@+id/up_z"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_gravity="center"
            android:layout_marginRight="5dp"
            android:layout_weight="1"
            android:background="@drawable/btn"
            android:gravity="center"
            android:text="@string/up_z"
            android:textColor="@drawable/menu_name2"
            android:textSize="20sp" />

        <Button
            android:id="@+id/down_z"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_gravity="center"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp"
            android:layout_weight="1"
            android:background="@drawable/btn"
            android:gravity="center"
            android:text="@string/down_z"
            android:textColor="@drawable/menu_name2"
            android:textSize="20sp" />

        <Button
            android:id="@+id/jia_z"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_gravity="center"
            android:layout_marginLeft="5dp"
            android:layout_weight="1"
            android:background="@drawable/btn"
            android:gravity="center"
            android:text="@string/jia_z"
            android:textColor="@drawable/menu_name2"
            android:textSize="20sp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="30dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginTop="20dp"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="30dp"
            android:layout_gravity="center"
            android:text="@string/volume"
            android:textColor="@color/zhxfText"
            android:textSize="20sp" />

        <SeekBar
            android:id="@+id/audio"
            style="@style/Widget.AppCompat.ProgressBar.Horizontal"
            android:layout_width="match_parent"
            android:layout_height="30dp"
            android:layout_gravity="center" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="30dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginTop="20dp"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="30dp"
            android:layout_gravity="center"
            android:text="@string/brightness"
            android:textColor="@color/zhxfText"
            android:textSize="20sp" />

        <SeekBar
            android:id="@+id/light"
            style="@style/Widget.AppCompat.ProgressBar.Horizontal"
            android:layout_width="match_parent"
            android:layout_height="30dp"
            android:layout_gravity="center"
            android:max="255" />
    </LinearLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="10dp"
        android:gravity="center"
        android:text="@string/langualge"
        android:textColor="@color/grgray"
        android:textSize="20sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginTop="20dp"
        android:orientation="horizontal">

        <Button
            android:id="@+id/zh"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_gravity="center"
            android:layout_marginRight="5dp"
            android:layout_weight="1"
            android:background="@drawable/btn"
            android:gravity="center"
            android:text="简体中文"
            android:textColor="@drawable/menu_name2"
            android:textSize="20sp" />

        <Button
            android:id="@+id/en"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_gravity="center"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp"
            android:layout_weight="1"
            android:background="@drawable/btn"
            android:gravity="center"
            android:text="English"
            android:textColor="@drawable/menu_name2"
            android:textSize="20sp" />

        <Button
            android:id="@+id/ja"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_gravity="center"
            android:layout_marginLeft="5dp"
            android:layout_weight="1"
            android:background="@drawable/btn"
            android:gravity="center"
            android:text="日本語"
            android:textColor="@drawable/menu_name2"
            android:textSize="20sp" />

        <Button
            android:id="@+id/ko"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_gravity="center"
            android:layout_marginLeft="5dp"
            android:layout_weight="1"
            android:background="@drawable/btn"
            android:gravity="center"
            android:text="한국어"
            android:textColor="@drawable/menu_name2"
            android:textSize="20sp" />
    </LinearLayout>
</LinearLayout>